# deepstream_sot_plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config_sot.yml
cmake/: install_symlinks.cmake.in
includes/: Tracker.h  baseTrack_trt.h  deepTracker.h  half.hpp  mixformerv2_trt.h  nanotrack_trt.h  ostrack_trt.h  suTrack_trt.h
models/: convert2trt.sh  test_engine.sh  test_model.py
src/: NvMOTContext.cpp  Tracker.cpp  deepTracker.cpp  mixformerv2_trt.cpp  nanotrack_trt.cpp  ostrack_trt.cpp  suTrack_trt.cpp
tests/: test_track.cpp  test_track_video.cpp  track_test_config.yml  track_video_test_config.yml
